[package]
name    = "cw20-wrapped-tokenfactory"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true, features = ["iterator", "cosmwasm_1_3"] }
cw-storage-plus   = { workspace = true, features = ["iterator"] }
cw20              = { workspace = true }
cw20-ctx          = { workspace = true }
embed-commit      = { workspace = true }
frissitheto       = { workspace = true }
thiserror         = { workspace = true }
token-factory-api = { workspace = true }
