[package]
name    = "cosmwasm-deployer"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
access-manager-types   = { workspace = true }
anyhow                 = { workspace = true, features = ["std"] }
bip32                  = { workspace = true }
clap                   = { workspace = true, features = ["derive", "error-context", "help", "env"] }
cometbft-rpc           = { workspace = true }
cosmos-client          = { workspace = true }
cosmos-signer          = { workspace = true }
cosmwasm-std           = { workspace = true, features = ["std"] }
cw-escrow-vault        = { workspace = true, features = ["library"] }
cw20                   = { workspace = true }
embed-commit           = { workspace = true }
embed-commit-verifier  = { workspace = true }
flate2                 = "1.1.5"
futures                = { workspace = true }
hex-literal            = { workspace = true }
ibc-union-light-client = { workspace = true }
ibc-union-msg          = { workspace = true }
protos                 = { workspace = true }
rand_chacha            = "0.3.1"
serde                  = { workspace = true, features = ["derive"] }
serde_json             = { workspace = true }
sha2                   = { workspace = true }
tokio                  = { workspace = true, features = ["full"] }
tracing                = { workspace = true }
tracing-subscriber     = { workspace = true, features = ["env-filter", "fmt", "ansi"] }
ucs03-zkgm             = { workspace = true, features = ["library"] }
unionlabs              = { workspace = true, features = ["proto"] }
